--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,27 +1,34 @@
 html {
-  display: inline-flex;
   position: relative;
-  margin: 0%;
-  width: auto;
+  width: 100%;
   height: 100%;
-  flex: 1;
 }
 
 body {
   display: inline-flex;
-  margin: 0%;
+  flex-direction: row;
+  position: relative;
+  margin: 0;
+  display: inline-flex;
+  background-color: #242424;
   width: 100%;
   height: 100%;
- 
-  position: relative;
-  overflow: overlay;
-  background-color: #242424;
+  box-sizing: border-box;
+
 }
 
-
-body a {
-  color: rgb(107, 107, 255);
+html *::-webkit-scrollbar {
+  appearance: none;
+  width: 5px;
+  height: 5px;
+  border-radius: 5px;
+  z-index: 100;
+  background-color: #191919;
 }
 
+html *::-webkit-scrollbar-thumb {
+  background: #838383;
+  border-radius: 10px;
+  position: absolute;
 
-
+}
